<?xml version="1.0"?>
<package format="2">
  <name>ag_action_server</name>
  <version>0.0.0</version>
  <description>Niryo action server package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="andrea.gavazzi@fake_me.com">Andrea Gavazzi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>niryo_one_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
